--- a/changeskin/build.gradle
+++ b/changeskin/build.gradle
@@ -10,7 +10,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -41,3 +41,5 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
+apply from: "../bintrayUpload.gradle"
