--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
@@ -20,6 +21,17 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+        maven {
+            url "https://oss.sonatype.org/content/repositories/snapshots/"
+        }
+        //hms
+        maven {url 'http://developer.huawei.com/repo/'}
+        //fcm
+//        maven { url "https://maven.google.com" }
+        //o2oa
+        maven { url "http://maven.o2oa.net/repository/maven-public/" }
     }
 }
 
